# salary-prediction

./: .gitignore  README.md  evaluate.py  pyproject.toml  requirements.txt  test.py  to_onnx.py  train.py
configs/: bert_train_config.yaml  config.yaml  preprocessing_config.yaml
configs/data/: data.yaml
configs/train/: bert.yaml
data/: features.json
src/: __init__.py  data_ingestion.py  data_validation.py  datasets.py  loss.py  optimizer.py  preprocessing.py  train_test_split.py  trainer.py  utils.py
src/base/: evaluator.py  registries.py  trainer.py  utils.py
src/data/: ingestion.py  preprocessing.py  split.py  validation.py
src/models/: bert.py
